--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Patita Feliz</title>
 </head>
 <body>
-    
+    <h1>Patita Feliz</h1>
+    <!-- Peso, raza -->
+    <script>
+        let nombre1;
+        let color1;
+        let raza1;
+        let edad1;
+        let vacunado1;
+        
+        alert('Registros de Perrito 1');
+        nombre1 = prompt('Nombre');
+        color1 = prompt('Color');
+        raza1 = prompt('Raza');
+        edad1 = prompt('Edad');
+        vacunado1 = prompt('Vacunado');
+        alert(`
+        Nombre: ${nombre1}
+        Color: ${color1}
+        Raza: ${raza1}
+        Edad: ${edad1}
+        Vacunado: ${vacunado1}
+        `);
+
+    </script>
 </body>
 </html>
