--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patita Feliz</title>
+    <title>Registro Feliz</title>
 </head>
 <body>
-    <h1>Patita Feliz</h1>
+    <h1>Registro Feliz</h1>
     <!-- Peso, raza -->
     <script>
         let nombre1;
@@ -15,6 +15,11 @@
         let raza1;
         let edad1;
         let vacunado1;
+        let nombre2;
+        let color2;
+        let raza2;
+        let edad2;
+        let vacunado2;
         
         alert('Registros de Perrito 1');
         nombre1 = prompt('Nombre');
@@ -22,6 +27,18 @@
         raza1 = prompt('Raza');
         edad1 = prompt('Edad');
         vacunado1 = prompt('Vacunado');
+        
+        alert('Registros de Perrito 2');
+        nombre2 = prompt('Nombre');
+        color2 = prompt('Color');
+        raza2 = prompt('Raza');
+        edad2 = prompt('Edad');
+        vacunado2 = prompt('Vacunado');
+
+        alert('Perro1: Nombre: ' + nombre1 + ', color: ' + color1 + ', raza: ' + raza1 + ', vacunado: ' + vacunado1);
+        alert('Perro2: Nombre: ' + nombre2 + ', color: ' + color2 + ', raza: ' + raza2 + ', vacunado: ' + vacunado2);
+
+
         alert(`
         Nombre: ${nombre1}
         Color: ${color1}
