--- a/index2.html
+++ b/index2.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Frase Feliz</title>
 </head>
 <body>
+    <h1>Frase Feliz</h1>
+    <script>
+        alert('Frase Feliz');
+        alert('Enter para obtener la frase del día');
+        // alert('Hazlo o no lo hagas. Pero no lo intentes.');
+        alert('El mejor profesor, el fracaso es.');
+        // alert('Transmite siempre lo que has aprendido.');
+    </script>
     
 </body>
 </html>
