--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
         alert('Frase Feliz');
         alert('Enter para obtener la frase del día');
         // alert('Hazlo o no lo hagas. Pero no lo intentes.');
-        alert('El mejor profesor, el fracaso es.');
+        alert('"El mejor profesor, el fracaso es."');
         // alert('Transmite siempre lo que has aprendido.');
     </script>
     
