--- a/index2.html
+++ b/index2.html
@@ -10,9 +10,10 @@
     <script>
         alert('Frase Feliz');
         alert('Enter para obtener la frase del día');
+        alert('El mejor profesor, el fracaso es.');
         // alert('Hazlo o no lo hagas. Pero no lo intentes.');
-        alert('"El mejor profesor, el fracaso es."');
         // alert('Transmite siempre lo que has aprendido.');
+        // alert('¿Quieres saber la diferencia entre un maestro y un aprendiz? El maestro ha fallado más veces de las que el principiante lo ha intentado.');
     </script>
     
 </body>
