--- a/index3.html
+++ b/index3.html
@@ -10,7 +10,7 @@
         let user = 'joseluis';
         let password = '123456';
 
-        let userprompt;
+        let userprompt = prompt('Usuario (ingresar el nombre joseluis)');
         let passpromt;
 
         if(userprompt == user){
