--- a/index3.html
+++ b/index3.html
@@ -16,7 +16,7 @@
         if(userprompt == user){
             alert('Bienvenido '+user);
         }else{
-            alert('Usuario NO registrado');
+            alert('Usuario NO registrado, ¡SALIR DEL SISTEMA, POR FAVOR!');
         }
 
 
