modifcacion de contraseña

--- a/index3.html
+++ b/index3.html
@@ -11,7 +11,7 @@
         let user = 'joseluis';
         let password = '123456';
 
-        alert('sistema que valida su usuario y 3 intentos de contraseña');
+        alert('sistema que valida su usuario (ya sea con mayúscula o minúscula) y solo permite 3 intentos de contraseña');
 
         let userprompt = prompt('Usuario (ingresar el nombre joseluis)');
         let usercorregido = userprompt.toLowerCase();
