modifcacion de contraseña01

--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,9 @@
     <title>Usuario_Contraseña</title>
 </head>
 <body>
-    <h1>Joseluis Muñoz</h1>
+    <h1>Valida el ingreso del usuario y permite 03 intentos de contraseña</h1>
+    <h3>usurio: joseluis</h3>
+    <h3>contraseña: 123456</h3>
     <script>
         let user = 'joseluis';
         let password = '123456';
