--- a/index3.html
+++ b/index3.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Valida el ingreso del usuario y permite 03 intentos de contraseña</h1>
-    <h3>usurio: joseluis</h3>
-    <h3>contraseña: 123456</h3>
+    <br />
+    <p>cambia el nombre de mayúscula a minúscula</p>
+    <h3>Usuario: joseluis</h3>
+    <h3>Contraseña: 123456</h3>
     <script>
         let user = 'joseluis';
         let password = '123456';
